# blue-airco-support

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_knowledge_import.py
app/: __init__.py  config.py  database.py  main.py
app/api/: health.py  internal_tickets.py
app/cli/: __init__.py  knowledge_import.py
app/core/: __init__.py  audit.py  safety.py
app/models/: __init__.py  base.py  entities.py  knowledge.py
app/services/: knowledge_import.py  safety_service.py  ticket_service.py
docs/: ARCHITECTURE.md  CODEX_START_PROMPT.md  MILESTONE_01_REPORT.md  MILESTONE_03_REPORT.md  MILESTONE_05_REPORT.md  PRODUCT_SPEC.md  TEST_STRATEGY.md  TRACEABILITY_MATRIX.md
tests/: conftest.py  knowledge_bundle_fixture.py
tests/integration/: test_00_migrations.py  test_internal_ticket_api.py  test_knowledge_import.py  test_ticket_persistence.py
tests/scenario/: __init__.py  test_persisted_safety_scenario.py  test_safety_scenarios.py
tests/unit/: test_audit.py  test_health.py  test_knowledge_import.py  test_safety.py  test_safety_service.py  test_ticket_service.py
